fixed landscape issues on iphone
Iphone was having issues with elements overlapping in landscape mode, added a media query to help mitigate that.

--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,7 @@ main {
     .featured-image img {
         width: 70%;
         margin: 0;
+        height: auto;
     }
 
     .instructions-container {
@@ -473,4 +474,17 @@ main {
     .card-overlay-title {
         font-size: 1rem;
     }
+}
+
+@media (orientation : landscape) {
+    
+    .instructions-container {
+        width: 100%;
+        height: 100%;
+    }
+
+    .featured-image img {
+        width: 100%;
+    }
+
 }
